Tabs: Fixed overlapping issues in carousel on small screens

--- a/src/plugins/tabs/tabs-smallViewUnder.scss
+++ b/src/plugins/tabs/tabs-smallViewUnder.scss
@@ -36,6 +36,9 @@
 				@extend %tabs-xsmallview-display-none;
 			}
 		}
+		figcaption {
+			padding: 1em 60px;
+		}
 	}
 	&.tabs-acc {
 		> {
